5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1771_1583.log
== SUBMITION (2019-05-30 08:54:18) 
-- CODE:
from numpy import*
numero=input("digite o numero:")
c=""
i=0
while(i<len(numero)):
	if(i+1)%==0 and 1<(len(numero)-1):
		c=c+str(numero[i])+"."
	else:
		c=c+str(numero[i])
	i=i+1
print(c)
-- EXECUTION TIME:
0.143327
-- ERROR:
  File "/home/codebench/codes/1771/1583/main.py", line 6
    if(i+1)%==0 and 1<(len(numero)-1):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 08:54:45) 
-- CODE:
from numpy import*
numero=input("digite o numero:")
c=""
i=0
while(i<len(numero)):
	if((i+1)%==0 and 1<(len(numero)-1)):
		c=c+str(numero[i])+"."
	else:
		c=c+str(numero[i])
	i=i+1
print(c)
-- EXECUTION TIME:
0.209238
-- ERROR:
  File "/home/codebench/codes/1771/1583/main.py", line 6
    if((i+1)%==0 and 1<(len(numero)-1)):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 08:54:50) 
-- CODE:
from numpy import*
numero=input("digite o numero:")
c=""
i=0
while(i<len(numero)):
	if((i+1)%==0 and 1<(len(numero)-1)):
		c=c+str(numero[i])+"."
	else:
		c=c+str(numero[i])
	i=i+1
print(c)
-- ERROR:
File "XXXX", line 6
    if((i+1)%==0 and 1<(len(numero)-1)):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 08:55:26) 
-- CODE:
from numpy import*
numero=input("digite o numero:")
c=""
i=0
while(i<len(numero)):
	if((i+1)%3==0 and 1<(len(numero)-1)):
		c=c+str(numero[i])+"."
	else:
		c=c+str(numero[i])
	i=i+1
print(c)
-- EXECUTION TIME:
0.400651
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123.
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321.
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321.
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 08:55:37) 
-- CODE:
from numpy import*
numero=input("digite o numero:")
c=""
i=0
while(i<len(numero)):
	if((i+1)%3==0 and i<(len(numero)-1)):
		c=c+str(numero[i])+"."
	else:
		c=c+str(numero[i])
	i=i+1
print(c)
-- EXECUTION TIME:
0.500521
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
